--- a/development_work.yml
+++ b/development_work.yml
@@ -7,41 +7,30 @@ on:
     branches: [ main ]
 
 jobs:
-  setup:
+  build:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v2
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v2
       with:
-        python-version: '3.10'
+        python-version: '3.11'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-  train:
-    runs-on: ubuntu-latest
-    needs: setup
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-
-    - name: Install dependencies
+    - name: Configure W&B API Key
+      env:
+        WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        echo "wandb_api_key=${{ secrets.WANDB_API_KEY }}" >> $GITHUB_ENV
 
-    - name: Train the model
-      run: |
-        python train.py
+    - name: Run training script
+      run: python train.py
+      env:
+        WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
