update notebook requirements and automation

--- a/development_work.yml
+++ b/development_work.yml
@@ -1,10 +1,10 @@
-name: CI/CD Pipeline for Deep Learning with PyTorch
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
