--- a/development_work.yml
+++ b/development_work.yml
@@ -17,20 +17,17 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.11'
+        python-version: '3.11.7'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Configure W&B API Key
-      env:
-        WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
-      run: |
-        echo "wandb_api_key=${{ secrets.WANDB_API_KEY }}" >> $GITHUB_ENV
+    - name: Set W&B API Key
+      run: echo "WANDB_API_KEY=${{ secrets.WANDB_API_KEY }}" >> $GITHUB_ENV
 
     - name: Run training script
-      run: python train.py
       env:
         WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
+      run: python train.py
