--- a/development_work.yml
+++ b/development_work.yml
@@ -24,7 +24,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Verify Environment Variable
+      run: echo "wan_db=$WANDB_API_KEY"
+      env:
+        wan_db: ${{ secrets.WANDB_API_KEY }}
+
     - name: Run training script
       env:
-        WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
+        wan_db: ${{ secrets.WANDB_API_KEY }}
       run: python train.py
