update yml and .py

--- a/development_work.yml
+++ b/development_work.yml
@@ -25,7 +25,7 @@ jobs:
         pip install -r requirements.txt
 
     - name: Verify Environment Variable
-      run: echo "wan_db=$WANDB_API_KEY"
+      run: echo "WANDB_API_KEY=$WANDB_API_KEY"
       env:
         wan_db: ${{ secrets.WANDB_API_KEY }}
 
